Chat scrollbar issue fixes #168

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -95,7 +95,7 @@
     margin: 20px 0 0 0;
     padding: 0;
     height: 380px;
-    overflow: auto;
+    overflow-y: scroll;
 
     .message
     {
@@ -133,8 +133,6 @@
             @include box-sizing(border-box);
             margin-top: 3px;
         }
-
-        // .current-user-
 
         .message-content
         {
